--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +12,7 @@
 </head>
 
 <body>
+    <div id="first-page">
     <header>
         <div class="header-menu">
             <div>Calendar</div>
@@ -107,7 +107,14 @@
         </tr>
         </tr>
     </table>
-
+   </div>
+   <div id="second-page">
+   
+        <p><b>Ваше имя:</b><br>
+            <input type="text" size="40">
+        </p>
+       
+   </div>
     <script src="./js/app.js"></script>
 </body>
 
