--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="first-page">
+    <div id="first-page" style="display: none">
     <header>
         <div class="header-menu">
             <div>Calendar</div>
@@ -109,11 +109,50 @@
     </table>
    </div>
    <div id="second-page">
-   
-        <p><b>Ваше имя:</b><br>
-            <input type="text" size="40">
-        </p>
-       
+   <form class="create-event">
+    <div class="create-event-left">
+          <label for="event-name">Name of the event: </label>
+   <input type="text" id="event-name" name="event-name"><br><br>
+   <label for="participants">Participants:</label>
+<select name="participants" id="participants">
+    <option value="Maria, Bob, Alex">Maria, Bob, Alex</option>
+    <option value="Maria, Bob">Maria, Bob</option>
+    <option value="Maria, Alex">Maria, Alex</option>
+    <option value="Bob, Alex">Bob, Alex</option>
+    <option value="Maria">Maria</option>
+    <option value="Bob">Bob</option>
+    <option value="Alex">Alex</option>
+</select>
+<br><br>
+<label for="day">Day:</label>
+<select name="day" id="day">
+    <option value="1">Monday</option>
+    <option value="2">Tuesday</option>
+    <option value="3">Wednesday</option>
+    <option value="4">Thursday</option>
+    <option value="5">Friday</option>
+</select>
+<br><br>
+<label for="time">Time:</label>
+<select name="time" id="time">
+    <option value="10:00">10:00</option>
+    <option value="11:00">11:00</option>
+    <option value="12:00">12:00</option>
+    <option value="13:00">13:00</option>
+    <option value="14:00">14:00</option>
+    <option value="15:00">15:00</option>
+    <option value="16:00">16:00</option>
+    <option value="17:00">17:00</option>
+    <option value="18:00">18:00</option>
+</select>
+<br><br>
+    </div>
+    <div class="create-event-right">
+<button type="submit" id="btn-cansel">Cansel</button>
+<button type="submit" id="btn-create">Create</button>
+    </div>
+   </form>
+           
    </div>
     <script src="./js/app.js"></script>
 </body>
