--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
-        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
-        crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Ciklum</title>
 </head>
@@ -22,7 +18,7 @@
                             <option value="Bob">Bob</option>
                             <option value="Alex">Alex</option>
                         </select>
-                     <button type="submit">New event+</button>
+                     <button type="submit" id="new-event">New event+</button>
            </div>
     </header>
     <table>
@@ -34,7 +30,7 @@
             <th>Thu</th>
             <th>Fri</th>
         </tr>
-        <tr>
+        <tr id="first">
             <td>10:00</td>
             <td></td>
             <td></td>
@@ -109,19 +105,19 @@
     </table>
    </div>
    <div id="second-page">
-   <form class="create-event">
+    <!-- style="display: none" -->
+    
+   <form class="form">
     <div class="create-event-left">
           <label for="event-name">Name of the event: </label>
-   <input type="text" id="event-name" name="event-name"><br><br>
+   <input type="text" id="input" name="event-name" value="Hello" ><br><br>
    <label for="participants">Participants:</label>
-<select name="participants" id="participants">
+   <select name="participants" id="participants">
     <option value="Maria, Bob, Alex">Maria, Bob, Alex</option>
     <option value="Maria, Bob">Maria, Bob</option>
     <option value="Maria, Alex">Maria, Alex</option>
     <option value="Bob, Alex">Bob, Alex</option>
-    <option value="Maria">Maria</option>
-    <option value="Bob">Bob</option>
-    <option value="Alex">Alex</option>
+
 </select>
 <br><br>
 <label for="day">Day:</label>
@@ -152,9 +148,10 @@
 <button type="submit" id="btn-create">Create</button>
     </div>
    </form>
-           
+        <div class="ex"></div>   
    </div>
-    <script src="app.js"></script>
+   <script src="test.js"></script> 
+    <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
